testcases/pos/labeled/call_param_annotations.bard
let fun f(x: Int) = x
    val y = 42 raisedTo {secret}
in
    f(y)
end
